@@ -2,8 +2,6 @@
   <TypeSignature Language="C#" Maintainer="Hector Gomez M" Value="public enum WrapMode" />
   <AssemblyInfo>
     <AssemblyName>gtk-sharp</AssemblyName>
-    <AssemblyPublicKey>
-    </AssemblyPublicKey>
     <AssemblyVersion>2.10.0.0</AssemblyVersion>
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
@@ -30,7 +28,6 @@
       <ReturnValue>
         <ReturnType>Gtk.WrapMode</ReturnType>
       </ReturnValue>
-      <Parameters />
       <Docs>
         <summary>Do not wrap lines, just make the text area wider.</summary>
         <remarks>
@@ -46,7 +43,6 @@
       <ReturnValue>
         <ReturnType>Gtk.WrapMode</ReturnType>
       </ReturnValue>
-      <Parameters />
       <Docs>
         <summary>Wrap text, breaking lines anywhere the cursor can appear.</summary>
         <remarks>
@@ -62,7 +58,6 @@
       <ReturnValue>
         <ReturnType>Gtk.WrapMode</ReturnType>
       </ReturnValue>
-      <Parameters />
       <Docs>
         <summary>Wrap text, breaking lines in between words.</summary>
         <remarks>
@@ -78,12 +73,8 @@
       <ReturnValue>
         <ReturnType>Gtk.WrapMode</ReturnType>
       </ReturnValue>
-      <Parameters>
-      </Parameters>
       <Docs>
         <summary>wrap text, breaking lines in between words, or if that is not enough, also between graphemes.</summary>
-        <remarks>
-        </remarks>
         <since version="Gtk# 2.4" />
       </Docs>
     </Member>
